<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="8dp">
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

        <ImageView
                android:id="@+id/personPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:layout_margin="6dp"
                android:contentDescription="@string/default_photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintVertical_bias="0.0" />

        <TextView
                android:id="@+id/personName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/default_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personPhoto" />

        <TextView
                android:id="@+id/personDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="8dp"
                android:text="@string/default_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/personName"/>

        <TextView
                android:id="@+id/personDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/default_description"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personDate"
                app:layout_constraintVertical_bias="0.05"/>

        <TextView
                android:id="@+id/removeButton"
                android:layout_width="56dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/remove_button"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/personPhoto"
                app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>